# ledbetter

./: .gitignore  CONTEXT.md  Cargo.toml  README.md
docs/adr/: 0001-per-controller-transport-derived-addresses.md  0002-single-render-thread-one-rate.md  0003-split-patch-and-show-files.md
scripts/: build-app.sh
src/: app.rs  camera.rs  canvas.rs  clock.rs  crossfader.rs  deck.rs  effect.rs  layer.rs  main.rs  output.rs  palette.rs  patch.rs  shader.rs  show_file.rs
