[package]
name = "ledbetter"
version = "0.1.0"
edition = "2024"

# ponytail: deps added per-milestone as they earn their place. M0 walking
# skeleton (clock -> effect -> canvas -> patch -> Art-Net out) needs only std.
# COBRA's full dep set lives in git history (commit 56d7c8c) for reference.
[dependencies]
