[package]
name = "ledbetter"
version = "0.1.0"
edition = "2024"

# ponytail: deps added per-milestone as they earn their place.
# COBRA's full dep set lives in git history (commit 56d7c8c) for reference.
[dependencies]
eframe = "0.33"
hsluv = "0.3.1"
rfd = "0.17.2"
rust_dmx = "0.10"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9"
stage_theme = { git = "https://github.com/generalelectrix/tunnels", branch = "main", version = "0.1.0" }
